# orillia

./: LICENSE  README.md  package-lock.json  package.json
docs/: MARKET_RESEARCH_PROPOSAL.md  gap_research.md
mcp/: pyproject.toml
mcp/src/orillia/: nova.py  server.py
mcp/src/orillia/demo/flawed_site/: index.html  pricing.html  signup.html
mcp/src/orillia/inspectors/: flow.py  segments.py
orillia/: README.md  pyproject.toml
orillia/src/design_inspector/: reporting.py  schemas.py  server.py
orillia/src/design_inspector/demo/flawed_site/: dashboard.html
orillia/src/design_inspector/inspectors/: flow.py  segments.py  tension.py
orillia/src/orillia/: reporting.py  server.py
orillia/src/orillia/inspectors/: tension.py
