[project]
name = "nova-act-design-inspector"
version = "0.1.0"
description = "MCP server that uses Nova Act to evaluate web design and UX for humans and computer use agents"
requires-python = ">=3.10"
dependencies = [
    "nova-act",
    "fastmcp>=3.0",
    "pydantic>=2.0",
]

[project.scripts]
design-inspector = "design_inspector.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/design_inspector"]
